--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -3,8 +3,8 @@ main:
     url: /
   - title: "Our Team"
     url: /team/
-  - title: "Robots"
-    url: /robots/
+  - title: "Robot Progress"
+    url: /progress/
   - title: "Events"
     url: /events/
   - title: "Contact"
