--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,5 +7,9 @@ main:
     url: /progress/
   - title: "Events"
     url: /events/
+  - title: "Lightning Talks"
+    url: /lightning-talks/
+  - title: "Sponsors"
+    url: /sponsors/
   - title: "Contact"
     url: /contact/
