--- a/_data/team.yml
+++ b/_data/team.yml
@@ -6,48 +6,48 @@ members:
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/aarush.jpg"
-    description: "Add your description here, Aarush!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Samik"
     grade: "6th Grade" 
     role: "Team Member"
     photo: "/assets/images/team/samik.jpg"
-    description: "Add your description here, Samik!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Nikhil"
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/deksh.jpg"
-    description: "Add your description here, Deksh!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Manit"
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/manit.jpg"
-    description: "Add your description here, Manit!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Niketh"
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/niketh.jpg"
-    description: "Add your description here, Niketh!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Edwin"
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/edwin.jpg"
-    description: "Add your description here, Edwin!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
     
   - name: "Daksh"
     grade: "6th Grade"
     role: "Team Member"
     photo: "/assets/images/team/nikhil.jpg"
-    description: "Add your description here, Nikhil!"
-    fun_fact: "Tell us something cool about yourself!"
+    description: ""
+    fun_fact: ""
 
