--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   links:
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube"
-      url: "https://www.youtube.com/channel/UC[YOUR_CHANNEL_ID]"
+      url: ""
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:shyambhagwat@gmail.com"
