--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ author:
   links:
     - label: "YouTube"
       icon: "fab fa-fw fa-youtube"
-      url: "https://youtu.be/zUXFGyBX0O8"
+      url: "https://www.youtube.com/watch?v=zUXFGyBX0O8"
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:shyambhagwat@gmail.com"
