--- a/_data/team.yml
+++ b/_data/team.yml
@@ -13,7 +13,7 @@ members:
     grade: "6th Grade" 
     role: "Team Member"
     description: "My name is Samik Kothari and I will be going to Eagle Ridge Middle School this year I live in Ashburn, VA. Some of my favorite sports are tennis and soccer and I like to play FIFA. "
-    fun_fact: ""
+    fun_fact: "Some of my favorite sports are tennis and soccer and I like to play FIFA."
     
   - name: "Nikhil"
     grade: "6th Grade"
