--- a/_data/team.yml
+++ b/_data/team.yml
@@ -12,6 +12,7 @@ members:
   - name: "Samik"
     grade: "6th Grade" 
     role: "Team Member"
+    photo: "https://drive.google.com/file/d/13pX11lplZ-PLZno2M926-tRMVWkwEQGj/view?usp=sharing"
     description: "My name is Samik Kothari and I will be going to Eagle Ridge Middle School this year I live in Ashburn, VA. For our team Core values are very important to get work done and I think that the most importent core values are Courage and Accountability."
     fun_fact: "Some of my favorite sports are tennis and soccer and I like to play FIFA."
     
